--- a/proton-tkg/proton-tkg.cfg
+++ b/proton-tkg/proton-tkg.cfg
@@ -94,7 +94,7 @@ _use_fsync="true"
 
 # Set to true to pass --with-wayland --with-vulkan configure arguments
 # !! Requires a compatible wine tree (9.0+ recommended) !!
-_wayland_driver="false"
+_wayland_driver="true"
 
 _plain_version=""
 _use_staging="true"
@@ -150,7 +150,7 @@ _build_mediaconv="true"
 # Default (empty value) will prompt if an existing gst dir is found
 # !!! There is not detection regarding what was and wasn't built, the previously built gst dir will be used as it was on last successfuly build, independently of the below options !!!
 # !!! If you want to add features you didn't build before (for example ffmpeg or lib32), you'll need to enable those and rebuild without this option first !!!
-_reuse_built_gst=""
+_reuse_built_gst="true"
 
 # Set to "true" to enable building 64-bit patched gstreamer & plugins - This is helpful to support video formats not covered by your distro packages
 # Will build orc, gstreamer, gst-plugins-base, gst-plugins-good, gst-plugins-bad, gst-plugins-ugly, gst-libav
