--- a/proton-tkg/proton-tkg.cfg
+++ b/proton-tkg/proton-tkg.cfg
@@ -150,7 +150,7 @@ _build_mediaconv="true"
 # Default (empty value) will prompt if an existing gst dir is found
 # !!! There is not detection regarding what was and wasn't built, the previously built gst dir will be used as it was on last successfuly build, independently of the below options !!!
 # !!! If you want to add features you didn't build before (for example ffmpeg or lib32), you'll need to enable those and rebuild without this option first !!!
-_reuse_built_gst=""
+_reuse_built_gst="true"
 
 # Set to "true" to enable building 64-bit patched gstreamer & plugins - This is helpful to support video formats not covered by your distro packages
 # Will build orc, gstreamer, gst-plugins-base, gst-plugins-good, gst-plugins-bad, gst-plugins-ugly, gst-libav
@@ -188,7 +188,7 @@ _protonify="true"
 _community_patches="amd_fsr_fshack-alternative.mypatch amdags-proton.mypatch atiadlxx-proton.mypatch 0002-proton_QPC.mypatch ntdll_Map_top-down_if_dll_characteristics_include_DYNAMIC_BASE.mypatch EA_desktop_fix.mypatch Shell32-CreateDirectoryInDestinationInFileOp-Move-multiop.mypatch"
 
 _user_patches="true"
-_user_patches_no_confirm="false"
+_user_patches_no_confirm="true"
 
 # Set to "false" to prompt about all non-critical hotfix patches at build time, or "ignore" to ignore all non-critical hotfix patches without confirmation
 # Default ("true") will apply all non-critical hotfix patches without confirmation
