change wayland_drive = true

--- a/proton-tkg/proton-tkg.cfg
+++ b/proton-tkg/proton-tkg.cfg
@@ -21,7 +21,7 @@ _nomakepkg_dependency_autoresolver="true"
 
 # Set to true if you want to skip the uninstaller at the end of proton-tkg building
 _skip_uninstaller="false"
-
+w
 # Set to true if you do not want your build to be automatically moved to your compatibilitytools.d dir
 _no_autoinstall="false"
 
@@ -94,7 +94,7 @@ _use_fsync="true"
 
 # Set to true to pass --with-wayland --with-vulkan configure arguments
 # !! Requires a compatible wine tree (9.0+ recommended) !!
-_wayland_driver="false"
+_wayland_driver="true"
 
 _plain_version=""
 _use_staging="true"
